# opentelemetry-operator

./: .chainsaw.yaml  .codecov.yml  .gitignore  .golangci.yaml  .linkspector.yml  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEBUG.md  Dockerfile  Dockerfile.alauda  Makefile  Makefile.alauda.mk  NOTICE  PROJECT  README-spryker.md  README.md  RELEASE.md  TRACING-6036.md  build-dev-operator.sh  bundle.Dockerfile  codecov.yml  collector.yaml  go.mod  go.sum  kind-1.19.yaml  kind-1.20.yaml  kind-1.21.yaml  kind-1.22.yaml  kind-1.23.yaml  kind-1.24.yaml  kind-1.25-multinode.yaml  kind-1.25.yaml  kind-1.26.yaml  kind-1.27.yaml  kind-1.28.yaml  kind-1.29.yaml  (+35 more)
.chloggen/: .bump-dotnet-1.2.0.yaml  0150-workaround.yaml  1028-restart-podwatcher.yaml  1115-move-autoscaler-crd-fields.yaml  1257-memory-usage-fixes.yaml  1298-change-ta-build-proc.yaml  130-upgrade.yaml  1305-apache-httpd-crd.yaml  1317-chloggen.yaml  1318-remote-config-service.yaml  1333-update-python-ai-version.yaml  1334-update-nodejs-ai-version.yaml  1337-fix-routes-openshift.yaml  1338-fix-autoinstrumentation-tests-openshift.yaml  1345-run-ta-nonroot.yaml  1346-run-ta-nonroot.yaml  1359-fix-data-race-in-discoverer.yaml  1366-avoid-running-the-instrumentation-pod-mutator-for-instrumented-pods.yaml  1368-create-operator-bridge-crd-in-operator.yaml  1383-replace-deperecated-gorilla-dependency.yaml  1413-cache-scrape-config-response.yaml  (+673 more)
tools/cp-utility/: Cargo.toml  README.md
tools/cp-utility/.cargo/: config.toml
tools/cp-utility/src/: main.rs
(+3283 files in other folders)
