[package]
name = "cp-utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# No dependencies here

[dev-dependencies]
# dependencies only used during tests
tempfile = "3.5.0"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }

[profile.release]
# Levers to optimize the binary for size
strip = true # Strip symbols
opt-level = "z" # Size optimization
lto = true # linking time optimizations


